Major changes for 0.0.7
- Adds short hand register names
- Adds a *lot* of instructions, most currently untested.

Major changes for 0.0.6
- Adds more instructions and examples: Can now call C-functions.

Major changes for 0.0.5
- Fixes bug in emit_function regarding function types.
- Works on both Python 2 and 3
- Adds new parameter types word_t and char_p.